# simnibs

./: .gitignore  CMakeLists.txt  pyproject.toml
docs/: conf.py
docs/data/: tutorial_python.py
examples/analysis/: group_average_mni.py
examples/coils/: tms_multi_stimulator_simulation.py
examples/optimization/: TI_fields_leadfields.py  tdcs_optimize_distributed.py  tdcs_optimize_intensity.py  tdcs_optimize_strength.py  tms_optimization.py
examples/simulations/: TI.py  TMS_MNI.py  run_simulations_group.py
examples/tes_flex_optimization/: tes_flex_4x1tes_intensity.py  tes_flex_tes_intensity_multistart.py  tes_flex_ti_intensity.py
examples/tms_flex_optimization/: tms_flex_Brainsway_H1_distance.py  tms_flex_Brainsway_H4_distance.py  tms_flex_MagVenture_MST_emag.py
examples/uncertainty_quantification/: uq_secondary_quantities.py  uq_setup_advanced.py
examples/utilities/: transform_coordinates.py
packing/: fix_entrypoints.py  pack.py
simnibs/: __init__.py  conftest.py
simnibs/GUI/: electrodeGUI.py  head_model_OGL.py  main_gui.py  nifti_viewer.py  simulation_menu.py
simnibs/_internal_resources/: sitecustomize.py
simnibs/cli/: add_tissues_to_upsampled.py  calc_B.py  charm.py  charm_tms.py  coil2nifti.py  convert_3_to_4.py  download_coils.py  eeg_positions.py  expand_to_center_surround.py  get_eeg_positions.py  get_fields_at_coordinates.py  link_external_progs.py  maskmesh.py  meshmesh.py  mni2subject.py  mni2subject_coords.py  msh2cortex.py  msh2nii.py  nii2msh.py  postinstall_simnibs.py  prepare_eeg_forward.py  prepare_eeg_montage.py  prepare_tdcs_leadfield.py  register.py  run_simnibs.py  simnibs_gui.py  subject2mni.py  subject2mni_coords.py  subject_atlas.py
simnibs/cli/utils/: args_charm.py  args_general.py  clargs.py  clpars.py  helpers.py  parsers_eeg.py
simnibs/eeg/: forward.py  utils.py  utils_fieldtrip.py  utils_mne.py
simnibs/eeg/tests/: test_forward.py
simnibs/examples/analysis/: group_average_fsavg.py  roi_analysis_mni.py  roi_analysis_surf.py
simnibs/examples/coils/: create_deformable_figure_of_8_coil.py  create_two_stimulator_coil.py
simnibs/examples/optimization/: leadfield.py  tdcs_optimize.py  tdcs_optimize_avoid.py  tdcs_optimize_mni.py  tdcs_optimize_multi_target.py  tms_opt_refined.py  tms_optimization_adm.py  tms_optimization_with_region.py
simnibs/examples/simulations/: TMS.py  simulation_custom_mesh.py  tACSchallenge.py  tDCS.py  tDCS_Nx1.py  tDCS_advanced.py  tDCS_ring.py
simnibs/examples/tes_flex_optimization/: tes_flex_4x1tes_focality.py  tes_flex_tes_Enormal_intensity.py  tes_flex_tes_focality.py  tes_flex_tes_geo_opt_intensity.py  tes_flex_tes_intensity.py  tes_flex_ti_focality.py  tes_flex_ttf_focality.py  tes_flex_ttf_intensity.py
simnibs/examples/tests/: examples.py
simnibs/examples/tms_flex_optimization/: tms_flex_Brainsway_H7_distance.py  tms_flex_MagVenture_MST_distance.py  tms_flex_fig8coil_emag.py  tms_flex_roundcoil_distance.py
simnibs/examples/uncertainty_quantification/: uncertainty_quantification.py
simnibs/examples/utilities/: roi_definition.py  transform_coilpos.py
simnibs/mesh_tools/: __init__.py  eeg_positions.py  gmsh_view.py  mesh_io.py  meshing.py  surface.py
simnibs/mesh_tools/cgal/: __init__.py  _mesh_volumes.cpp
simnibs/mesh_tools/tests/: test_mesh_io.py  test_meshing.py  test_msurface.py
simnibs/optimization/: ADMlib.py  __init__.py  opt_struct.py  tdcs_optimization.py  tms_flex_optimization.py  tms_optimization.py
simnibs/optimization/tes_flex_optimization/: current_estimator.py  electrode_layout.py  ellipsoid.py  measures.py  tes_flex_optimization.py
simnibs/optimization/tests/: test_ADMlib.py  test_opt_struct.py  test_optimization_methods.py  test_optimize_tms.py  test_tms_flex_optimization.py
simnibs/segmentation/: _cat_c_utils.pyx  _marching_cubes_lewiner_luts.py  brain_surface.py  charm_main.py  charm_utils.py  marching_cube.py  run_cat_multiprocessing.py
simnibs/segmentation/simnibs_samseg/: Affine.py  AffineWholeHead.py  BiasField.py  GMM.py  ProbabilisticAtlas.py  Samseg.py  SamsegUtility.py  SamsegWholeHead.py  color_scheme.py  figures.py  hdav.py  io.py  kvl.py  merge_alphas.py  simnibs_segmentation_utils.py  utilities.py  warp_mesh.py
simnibs/segmentation/tests/: test_brain_surface.py  test_cat_c_utils.py  test_charm_utils.py  test_marching_cube.py  test_thickness.py
simnibs/simulation/: analytical_solutions.py  biot_savart.py  electrode_placement.py  fem.py  gpc.py  numba_fem_utils.py  onlinefem.py  pardiso.py  run_simnibs.py  sim_struct.py
simnibs/simulation/pygpc/: __init__.py  adaptive.py  grid.py  misc.py  ni.py
simnibs/simulation/tests/: test_analytical_solutions.py  test_biot_savart.py  test_direct_solvers.py  test_electrode_placement.py  test_fem.py  test_fem_target_point_cloud.py  test_gpc.py  test_onlinefem.py  test_sim_struct.py
simnibs/utils/: TI_utils.py  _system_path.py  brainsprite_helper.py  cond_utils.py  csv_reader.py  file_finder.py  html_writer.py  itk_mesh_io.py  matlab_read.py  nnav.py  plotting.py  region_of_interest.py  roi_result_visualization.py  settings_reader.py  simnibs_logger.py  spatial_transform.py  spawn_process.py  transformations.py
tests/: conftest.py
tests/eeg/: test_forward.py  test_utils_fieldtrip.py
tests/mesh_tools/: test_mesh_io.py  test_meshing.py  test_msurface.py
tests/optimizations/: test_ADMlib.py  test_opt_struct.py  test_optimization_methods.py  test_optimize_tms.py  test_tms_flex_optimization.py
tests/segmentation/: test_brain_surface.py  test_cat_c_utils.py  test_charm_utils.py  test_marching_cube.py  test_thickness.py
tests/simulation/: test_analytical_solutions.py  test_biot_savart.py  test_electrode_placement.py  test_fem.py  test_fem_target_point_cloud.py  test_gpc.py  test_onlinefem.py  test_sim_struct.py
tests/utils/: test_TI_utils.py  test_cond_utils.py  test_csv_reader.py  test_file_finder.py  test_itk_mesh_io.py  test_nnav.py  test_region_of_interest.py  test_roi_result_visualization.py  test_settings_reader.py  test_spawn_process.py  test_transformations.py
(+41 files in other folders)
