[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core",
    "cython",

    # numpy requirement for wheel builds for distribution on PyPI - building
    # against 2.x yields wheels that are also compatible with numpy 1.x at
    # runtime.
    # Note that building against numpy 1.x works fine too - users and
    # redistributors can do this by installing the numpy version they like and
    # disabling build isolation.
    "numpy>=2.0.0",
]

[project]
name = "simnibs"
version = "4.5.0"
authors = [
  {name = "SimNIBS developers", email = "support@simnibs.org" }
]
license = "GPL-3.0-only"
description = "Simulation of Non-Invasive Brain Stimulation"
requires-python = ">=3.11"
dependencies =[
    "numpy>=1.26.4",
    #"fmm3dpy",
    #"h5py",
    #"jsonschema",
    #"matplotlib",
    #"mkl ; sys_platform != 'darwin'",
    #"nibabel",
    #"numba",
    #"petsc4py",
    #"pillow",
    #"pygpc==0.4.1",
    #"PyQt5",
    #"requests",
    #"samseg",
    #"scipy",
    #"tbb",
]

[project.optional-dependencies]
test =[
    "pytest",
    "mock"
]
GUI =[ # Renamed from 'gui' to 'GUI' to match old file
    "pyqt5",
    "pyopengl"
]

[project.urls]
"Homepage" = "http://simnibs.org"
"Bug Reports" = "https://github.com/simnibs/simnibs/issues"
"Source" = "https://github.com/simnibs/simnibs/"

[project.scripts]
    charm = "simnibs.cli.charm:main"
    add_tissues_to_upsampled = "simnibs.cli.add_tissues_to_upsampled:main"
    calc_B = "simnibs.cli.calc_B:main"
    coil2nifti = "simnibs.cli.coil2nifti:main"
    charm_tms = "simnibs.cli.charm_tms:main"
    convert_3_to_4 = "simnibs.cli.convert_3_to_4:main"
    download_coils = "simnibs.cli.download_coils:main"
    eeg_positions = "simnibs.cli.eeg_positions:main"
    expand_to_center_surround = "simnibs.cli.expand_to_center_surround:main"
    get_eeg_positions = "simnibs.cli.get_eeg_positions:main"
    get_fields_at_coordinates = "simnibs.cli.get_fields_at_coordinates:main"
    maskmesh = "simnibs.cli.maskmesh:main"
    meshmesh = "simnibs.cli.meshmesh:main"
    mni2subject_coords = "simnibs.cli.mni2subject_coords:main"
    mni2subject = "simnibs.cli.mni2subject:main"
    msh2cortex = "simnibs.cli.msh2cortex:main"
    msh2nii = "simnibs.cli.msh2nii:main"
    nii2msh = "simnibs.cli.nii2msh:main"
    postinstall_simnibs = "simnibs.cli.postinstall_simnibs:main"
    prepare_eeg_forward = "simnibs.cli.prepare_eeg_forward:main"
    prepare_eeg_montage = "simnibs.cli.prepare_eeg_montage:main"
    prepare_tdcs_leadfield = "simnibs.cli.prepare_tdcs_leadfield:main"
    register = "simnibs.cli.register:main"
    simnibs = "simnibs.cli.run_simnibs:main"
    simnibs_gui = "simnibs.cli.simnibs_gui:main"
    subject2mni_coords = "simnibs.cli.subject2mni_coords:main"
    subject2mni = "simnibs.cli.subject2mni:main"
    subject_atlas = "simnibs.cli.subject_atlas:main"

[tool.scikit-build]
wheel.packages = ["simnibs"]
wheel.exclude = ["**.pyx", "**.cpp", "**.c", "**.h"]
sdist.exclude = ["simnibs/external/bin/**"]
